[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Game_Main/Interface/Interface.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Game_Main/Scripts/window_main.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Game_Main/gfx/tilesets/Chesthole32/terrain.res" type="TileSet" id=3]
[ext_resource path="res://Scenes/Game_Main/gfx/tilesets/Chesthole32/furniture.res" type="TileSet" id=4]
[ext_resource path="res://Scenes/Game_Main/gfx/tilesets/Chesthole32/other.res" type="TileSet" id=5]
[ext_resource path="res://Scenes/Game_Main/gfx/tilesets/Chesthole32/creatures.res" type="TileSet" id=6]
[ext_resource path="res://Scenes/Game_Main/gfx/tilesets/Chesthole32/players.res" type="TileSet" id=7]
[ext_resource path="res://Scenes/Game_Main/Scripts/Camera2D.gd" type="Script" id=8]
[ext_resource path="res://Scenes/Game_Main/Scripts/timer_localmap_request.gd" type="Script" id=9]

[node name="base" type="Node2D"]

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
offset_right = 854.0
offset_bottom = 480.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Interface" parent="SubViewportContainer" instance=ExtResource( 1 )]

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
size = Vector2( 854, 480 )
handle_input_locally = false
msaa = 3
hdr = false
disable_3d = true
usage = 0
render_target_update_mode = 3

[node name="node_window_main" type="Node2D" parent="SubViewportContainer/SubViewport"]
script = ExtResource( 2 )

[node name="CanvasModulate" type="CanvasModulate" parent="SubViewportContainer/SubViewport/node_window_main"]
visible = false
color = Color( 0.101961, 0.101961, 0.101961, 1 )

[node name="terrain_tilemap" type="TileMap" parent="SubViewportContainer/SubViewport/node_window_main"]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PackedInt32Array( -393227, 42, 0 )

[node name="furniture_tilemap" type="TileMap" parent="SubViewportContainer/SubViewport/node_window_main"]
tile_set = ExtResource( 4 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PackedInt32Array( -393227, 42, 0, -131072, 0, 0 )

[node name="items_tilemap" type="TileMap" parent="SubViewportContainer/SubViewport/node_window_main"]
tile_set = ExtResource( 5 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PackedInt32Array( 4259843, 107, 0 )

[node name="creature_tilemap" type="TileMap" parent="SubViewportContainer/SubViewport/node_window_main"]
tile_set = ExtResource( 6 )
cell_size = Vector2( 32, 32 )
format = 1

[node name="players_tilemap" type="TileMap" parent="SubViewportContainer/SubViewport/node_window_main"]
tile_set = ExtResource( 7 )
cell_size = Vector2( 32, 32 )
format = 1

[node name="Camera2D" type="Camera2D" parent="SubViewportContainer/SubViewport/node_window_main"]
current = true
drag_horizontal_enabled = false
drag_vertical_enabled = false
script = ExtResource( 8 )

[node name="timer_request_mapupdate" type="Timer" parent="SubViewportContainer/SubViewport/node_window_main"]
autostart = true
script = ExtResource( 9 )

[node name="lights" type="Node2D" parent="SubViewportContainer/SubViewport/node_window_main"]
